@@ -1,6 +1,7 @@
 <driver id="driver/drv_z42">
  <name>drv_z42</name>
  <url>http://www.linuxprinting.org/download/printing/drv_z42-0.4.3.tar.bz2</url>
+ <obsolete replace="gutenprint" />
  <execution>
   <filter />
   <prototype>%Dgs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=bitcmyk -sPAPERSIZE=$size -r${hdpi}x600 %A%Z -sOutputFile=- - | z42_cmyk size=$size hdpi=$hdpi%B</prototype>
