@@ -23,7 +23,7 @@
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>B</functionality>
-  <driver>drv_z42</driver>
+  <driver>gutenprint</driver>
   <!--verified--><!--no "contrib_url"-->
   <comments>
     <en>
