@@ -28,20 +28,20 @@
       <commandset>LNPAP</commandset>
     </usb>
   </autodetect>
-  <functionality>D</functionality>
-  <driver>drv_z42</driver>
+  <functionality>B</functionality>
+  <driver>gutenprint</driver>
   <!--verified-->
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    This is a multifunction device with integrated scanner/copier.
+    This is a multifunction device with integrated scanner/copier.&lt;p&gt;
 
     Scanning with SANE works mostly (ie sane's "good") with the gt68xx
-    driver.
+    driver.&lt;p&gt;
 
-    Printing works somewhat.  There are several drivers known to work
-    partially; this entry needs an update as it might be better now.
+    The printing engine is compatible with the Z42, so you can use
+    drivers/PPD files for this model.&lt;p&gt;
 
     </en>
   </comments>
