@@ -1,7 +1,13 @@
 2006-12-19  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/drv_z42.xml: Marked this driver as obsolete, as Gutenprint
+	  replaces it completely.
+
 	* driver/gutenprint.xml: Updated printer list from last Gutenprint
 	  package, added Lexmark X73 and Compaq IJ1200.
+
+	* printer/Lexmark-X73.xml, printer/Compaq-IJ1200.xml: Set
+	  recommended driver to "gutenprint", text updates.
 
 2006-12-18  Till Kamppeter <till.kamppeter@gmail.com>
 
